--- a/inc/flexslider/flexslider.css
+++ b/inc/flexslider/flexslider.css
@@ -66,8 +66,8 @@ html[xmlns] .slides {display: block;}
 .flex-direction-nav .flex-next { right: -50px; text-align: right; }
 .flexslider:hover .flex-prev { opacity: 0.7; left: 10px; }
 .flexslider:hover .flex-next { opacity: 0.7; right: 10px; }
-.flexslider:hover .flex-next:hover { background: url('/img/freccia_dx_m5_over.png') no-repeat; }
-.flexslider:hover .flex-prev:hover { background: url('/img/freccia_sx_m5_over.png') no-repeat; }
+.flexslider:hover .flex-next:hover { background: url('../../img/freccia_dx_m5_over.png') no-repeat; }
+.flexslider:hover .flex-prev:hover { background: url('../../img/freccia_sx_m5_over.png') no-repeat; }
 .flex-direction-nav .flex-disabled { opacity: 0!important; filter:alpha(opacity=0); cursor: default; }
 .flex-direction-nav a:before  { font-family: "flexslider-icon"; font-size: 40px; display: none; content: '\f001'; }
 .flex-direction-nav a.flex-next:before  { content: '\f002'; }
