aggiunto BUS e GRUPPO TESSILE alla gallery Sistemato link FERMENTO NATURALE

--- a/css/style.css
+++ b/css/style.css
@@ -1247,6 +1247,8 @@ a.btn:hover .btn_arrow_m6 { background: url('../img/btn/btn_bianco.png') no-repe
 #continuate .terre-re { background-color: #b68f48; }
 #continuate .acquabenecomune { background-color: #00dafc; }
 #continuate .fermentonaturale { background-color: #cc73f0; }
+#continuate .bus { background-color: #38eed4; }
+#continuate .gruppotessile { background-color: #f3bcef; }
 #continuate .empty { background-color: rgb(182,183,188); }
 
 /* CONTATTI */
