--- a/css/style.css
+++ b/css/style.css
@@ -1249,6 +1249,7 @@ a.btn:hover .btn_arrow_m6 { background: url('../img/btn/btn_bianco.png') no-repe
 #continuate .fermentonaturale { background-color: #cc73f0; }
 #continuate .bus { background-color: #38eed4; }
 #continuate .gruppotessile { background-color: #f3bcef; }
+#continuate .fairphone { background-color: #128cca; }
 #continuate .empty { background-color: rgb(182,183,188); }
 
 /* CONTATTI */
